deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kbt1-ollilove-app
  labels:
    app: kbt1-ollilove-app
spec:
  selector:
    matchLabels:
      app: kbt1-ollilove-app
  replicas: 1
  template:
    metadata:
      name: kbt1-ollilove-app
      labels:
        app: kbt1-ollilove-app
    spec:
      containers:
        - name: kbt1-ollilove-app
          image: docker.io/gyuminn/kbt1-ollilove-app:1.0.0
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
            - name: media-data-app
              mountPath: /usr/share/nginx/html/media
              readOnly: true
      volumes:
        - name: media-data-app
          persistentVolumeClaim:
            claimName: kbt1-ollilove-app-pvc
            readOnly: true

---
apiVersion: v1
kind: Service
metadata:
  name: kbt1-ollilove-app
spec:
  type: ClusterIP
  selector:
    app: kbt1-ollilove-app
  ports:
    - name: kbt1-ollilove-app
      port: 8080
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollilove
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ollilove.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: kbt1-ollilove-app
                port:
                  number: 8080
